--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
-<body>
-    sdfsdfsdfsdfsdf
-    <p>ecrieuwrciuweriewuhriweufhe  wsfwecwecewcew</p>
-</body>
-</html>
+<!doctype HTML>
+<meta charset="utf-8">
+
+<script src="node_modules/jquery/dist/jquery.js"></script>
+
+<script>
+    $(document).ready(function() {
+        $('body').css('background-color', '#FC0FC0');
+    });
+</script>
